added deeper nn training with early stopping, let rf go deeper, and increased n estimators. implemented garch fallback training, and min_position sizes for trading.

--- a/cross_asset.ipynb
+++ b/cross_asset.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,6 +121,7 @@
     "# Trading strategy parameters\n",
     "TRANSACTION_COST_BPS = 5  # 5 basis points per trade\n",
     "INITIAL_CAPITAL = 100000  # $100k initial capital\n",
+    "MIN_POSITION_SIZE = 0.1  # Minimum position size (10%) - filter out weak signals that won't cover transaction costs\n",
     "\n",
     "# Selected stocks (30 total: SPY, QQQ + 28 others across sectors)\n",
     "SELECTED_STOCKS_FULL = [\n",
@@ -1090,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1112,12 +1113,13 @@
     "import traceback\n",
     "\n",
     "def compute_strategy_returns(predictions, actual_rv, current_rv, forecast_horizon, \n",
-    "                             transaction_cost_bps=5, initial_capital=100000):\n",
+    "                             transaction_cost_bps=5, initial_capital=100000, min_position_size=0.1):\n",
     "    \"\"\"\n",
     "    Simple vol-scaled trading strategy:\n",
     "    - If predicted RV increase: go long volatility (positive position)\n",
     "    - If predicted RV decrease: go short volatility (negative position)\n",
     "    - Position size scaled by predicted magnitude\n",
+    "    - Only trade if signal is strong enough (min_position_size threshold)\n",
     "    - Transaction costs applied on position changes\n",
     "    \"\"\"\n",
     "    # Convert log-diff predictions to RV change predictions\n",
@@ -1131,7 +1133,11 @@
     "    # Strategy: position = sign(pred_rv_diff) * min(abs(pred_rv_diff) / current_rv, 1.0)\n",
     "    # Positive position when RV predicted to increase (we profit if volatility goes up)\n",
     "    # Negative position when RV predicted to decrease (we profit if volatility goes down)\n",
-    "    positions = np.sign(pred_rv_diff) * np.minimum(np.abs(pred_rv_diff) / (current_rv + eps), 1.0)\n",
+    "    positions_raw = np.sign(pred_rv_diff) * np.minimum(np.abs(pred_rv_diff) / (current_rv + eps), 1.0)\n",
+    "    \n",
+    "    # Filter out weak signals (only trade if position size >= min_position_size)\n",
+    "    # This makes the strategy more realistic by avoiding trades on tiny signals that won't cover transaction costs\n",
+    "    positions = np.where(np.abs(positions_raw) >= min_position_size, positions_raw, 0.0)\n",
     "    \n",
     "    # Compute strategy returns: position * (actual_rv_fwd - current_rv) / current_rv\n",
     "    # This approximates a volatility trading P&L\n",
@@ -1274,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1863,10 +1869,17 @@
     "                print(f\"  Linear model failed: {e}\")\n",
     "                model_predictions['Linear'] = None\n",
     "            \n",
-    "            # 2. Random Forest (simplified - no hyperparameter tuning for speed)\n",
+    "            # 2. Random Forest (improved hyperparameters)\n",
     "            try:\n",
-    "                rf_model = RandomForestRegressor(n_estimators=100, max_depth=10, \n",
-    "                                                random_state=42, n_jobs=-1)\n",
+    "                # Remove arbitrary max_depth constraint - let trees grow naturally\n",
+    "                # RF with deep trees + many estimators rarely overfits\n",
+    "                rf_model = RandomForestRegressor(\n",
+    "                    n_estimators=200,  # More trees for better performance\n",
+    "                    max_depth=None,  # Let trees grow naturally (no artificial constraint)\n",
+    "                    min_samples_leaf=5,  # Prevent overfitting at leaf level\n",
+    "                    random_state=42,\n",
+    "                    n_jobs=-1\n",
+    "                )\n",
     "                rf_model.fit(X_train, y_train)\n",
     "                rf_pred_test = rf_model.predict(X_test)\n",
     "                model_predictions['RandomForest'] = rf_pred_test\n",
@@ -1946,14 +1959,48 @@
     "                y_train_tensor = torch.FloatTensor(y_train_scaled).to(device)\n",
     "                X_test_tensor = torch.FloatTensor(X_test_scaled).to(device)\n",
     "                \n",
-    "                # Quick training (50 epochs)\n",
-    "                for epoch in range(50):\n",
+    "                # Prepare validation data\n",
+    "                X_val_scaled = scaler_X_nn.transform(X_val)\n",
+    "                y_val_scaled = scaler_y_nn.transform(y_val.reshape(-1, 1)).flatten()\n",
+    "                X_val_tensor = torch.FloatTensor(X_val_scaled).to(device)\n",
+    "                y_val_tensor = torch.FloatTensor(y_val_scaled).to(device)\n",
+    "                \n",
+    "                # Proper training with early stopping and validation monitoring\n",
+    "                best_val_loss = float('inf')\n",
+    "                patience_counter = 0\n",
+    "                patience = NN_PATIENCE\n",
+    "                best_model_state = None\n",
+    "                \n",
+    "                for epoch in range(NN_EPOCHS):\n",
+    "                    # Training step\n",
     "                    nn_model.train()\n",
     "                    optimizer.zero_grad()\n",
     "                    outputs = nn_model(X_train_tensor)\n",
     "                    loss = criterion(outputs, y_train_tensor)\n",
     "                    loss.backward()\n",
     "                    optimizer.step()\n",
+    "                    \n",
+    "                    # Validation monitoring (every 5 epochs to save time)\n",
+    "                    if epoch % 5 == 0 or epoch == 0:\n",
+    "                        nn_model.eval()\n",
+    "                        with torch.no_grad():\n",
+    "                            val_outputs = nn_model(X_val_tensor)\n",
+    "                            val_loss = criterion(val_outputs, y_val_tensor).item()\n",
+    "                        \n",
+    "                        if val_loss < best_val_loss:\n",
+    "                            best_val_loss = val_loss\n",
+    "                            best_model_state = nn_model.state_dict().copy()\n",
+    "                            patience_counter = 0\n",
+    "                        else:\n",
+    "                            patience_counter += 1\n",
+    "                        \n",
+    "                        # Early stopping\n",
+    "                        if patience_counter >= patience:\n",
+    "                            break\n",
+    "                \n",
+    "                # Load best model based on validation performance\n",
+    "                if best_model_state is not None:\n",
+    "                    nn_model.load_state_dict(best_model_state)\n",
     "                \n",
     "                nn_model.eval()\n",
     "                with torch.no_grad():\n",
@@ -1970,6 +2017,12 @@
     "                garch_preds = []\n",
     "                egarch_preds = []\n",
     "                \n",
+    "                # Track fallback frequency for reporting\n",
+    "                garch_fallback_count = 0\n",
+    "                egarch_fallback_count = 0\n",
+    "                garch_total_count = 0\n",
+    "                egarch_total_count = 0\n",
+    "                \n",
     "                # For each test point, use ONLY data BEFORE that point\n",
     "                for i, test_date in enumerate(test_dates):\n",
     "                    # CRITICAL: Get returns STRICTLY BEFORE test_date\n",
@@ -1977,11 +2030,22 @@
     "                    returns_before_test = daily_returns[daily_returns.index < test_date]\n",
     "                    \n",
     "                    if len(returns_before_test) > 100:  # Need sufficient history\n",
+    "                        # Compute historical volatility for fallback detection\n",
+    "                        hist_vol = np.std(returns_before_test) * np.sqrt(252)\n",
+    "                        \n",
     "                        # Forecast average volatility over next h days\n",
     "                        garch_pred = fit_garch_forecast_correct(returns_before_test, \n",
     "                                                                forecast_steps=horizon)\n",
     "                        egarch_pred = fit_egarch_forecast_correct(returns_before_test, \n",
     "                                                                  forecast_steps=horizon)\n",
+    "                        \n",
+    "                        # Track fallbacks (if prediction equals hist_vol, it's likely a fallback)\n",
+    "                        garch_total_count += 1\n",
+    "                        egarch_total_count += 1\n",
+    "                        if not np.isnan(garch_pred) and abs(garch_pred - hist_vol) < 1e-6:\n",
+    "                            garch_fallback_count += 1\n",
+    "                        if not np.isnan(egarch_pred) and abs(egarch_pred - hist_vol) < 1e-6:\n",
+    "                            egarch_fallback_count += 1\n",
     "                        \n",
     "                        # Current RV at forecast origin\n",
     "                        current_rv = test_data.loc[test_date, 'rv_today']\n",
@@ -2003,6 +2067,17 @@
     "                    else:\n",
     "                        garch_preds.append(np.nan)\n",
     "                        egarch_preds.append(np.nan)\n",
+    "                \n",
+    "                # Report fallback frequency\n",
+    "                if garch_total_count > 0:\n",
+    "                    garch_fallback_pct = (garch_fallback_count / garch_total_count) * 100\n",
+    "                    if garch_fallback_pct > 50:\n",
+    "                        print(f\"  WARNING: GARCH fell back to hist vol {garch_fallback_count}/{garch_total_count} times ({garch_fallback_pct:.1f}%)\")\n",
+    "                \n",
+    "                if egarch_total_count > 0:\n",
+    "                    egarch_fallback_pct = (egarch_fallback_count / egarch_total_count) * 100\n",
+    "                    if egarch_fallback_pct > 50:\n",
+    "                        print(f\"  WARNING: EGARCH fell back to hist vol {egarch_fallback_count}/{egarch_total_count} times ({egarch_fallback_pct:.1f}%)\")\n",
     "                \n",
     "                model_predictions['GARCH'] = np.array(garch_preds)\n",
     "                model_predictions['EGARCH'] = np.array(egarch_preds)\n",
@@ -2045,7 +2120,7 @@
     "                try:\n",
     "                    strategy_returns, equity, positions = compute_strategy_returns(\n",
     "                        pred_test_valid, test_rv_fwd_valid, test_rv_today_valid, horizon,\n",
-    "                        TRANSACTION_COST_BPS, INITIAL_CAPITAL\n",
+    "                        TRANSACTION_COST_BPS, INITIAL_CAPITAL, MIN_POSITION_SIZE\n",
     "                    )\n",
     "                    \n",
     "                    sharpe = compute_sharpe_ratio(strategy_returns)\n",
