added forceful training to not load from cache (optional)

--- a/cross_asset.ipynb
+++ b/cross_asset.ipynb
@@ -22,7 +22,14 @@
     "- **1 stock** (SPY)\n",
     "- **2 horizons** (1d, 5d)\n",
     "\n",
-    "This allows you to verify that all models (GARCH, EGARCH, etc.) and visualizations work correctly before running the full analysis.\n"
+    "This allows you to verify that all models (GARCH, EGARCH, etc.) and visualizations work correctly before running the full analysis.\n",
+    "\n",
+    "## Cache Control\n",
+    "\n",
+    "The notebook automatically caches fitted models and results to enable resumption after interruptions. \n",
+    "\n",
+    "- **By default**: If cache exists, results are loaded directly (fast, no retraining)\n",
+    "- **Force Retrain**: Set `FORCE_RETRAIN = True` in Cell 1 to ignore cache and retrain all models. Results will still be saved to cache after training.\n"
    ]
   },
   {
@@ -84,6 +91,9 @@
     "\n",
     "# DEBUG MODE: Set to True for quick testing (1 stock, 2 horizons)\n",
     "DEBUG_MODE = False  # Set to False for full analysis\n",
+    "\n",
+    "# CACHE CONTROL: Set to True to ignore cache and retrain all models (results will still be saved to cache)\n",
+    "FORCE_RETRAIN = True  # Set to True to retrain even if cache exists\n",
     "\n",
     "# Core parameters\n",
     "ROLLING_WINDOW = 30\n",
@@ -150,6 +160,9 @@
     "print(f\"  DEBUG_MODE: {DEBUG_MODE}\")\n",
     "if DEBUG_MODE:\n",
     "    print(f\"  ⚠️  DEBUG MODE: Testing with 1 stock and 2 horizons\")\n",
+    "print(f\"  FORCE_RETRAIN: {FORCE_RETRAIN}\")\n",
+    "if FORCE_RETRAIN:\n",
+    "    print(f\"  ⚠️  FORCE_RETRAIN: Will ignore cache and retrain all models\")\n",
     "print(f\"  Rolling window: {ROLLING_WINDOW} days\")\n",
     "print(f\"  Forecast horizons: {FORECAST_HORIZONS} days\")\n",
     "print(f\"  Number of assets: {len(SELECTED_STOCKS)}\")\n",
@@ -160,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:   3%|▎         | 1/33 [00:00<00:11,  2.72it/s]"
+      "Loading stocks:   3%|▎         | 1/33 [00:00<00:10,  2.94it/s]"
      ]
     },
     {
@@ -264,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:   6%|▌         | 2/33 [00:00<00:09,  3.32it/s]"
+      "Loading stocks:   6%|▌         | 2/33 [00:00<00:09,  3.42it/s]"
      ]
     },
     {
@@ -278,7 +291,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:   9%|▉         | 3/33 [00:00<00:08,  3.56it/s]"
+      "Loading stocks:   9%|▉         | 3/33 [00:00<00:08,  3.53it/s]"
      ]
     },
     {
@@ -292,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  12%|█▏        | 4/33 [00:01<00:07,  3.76it/s]"
+      "Loading stocks:  12%|█▏        | 4/33 [00:01<00:07,  3.67it/s]"
      ]
     },
     {
@@ -306,7 +319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  15%|█▌        | 5/33 [00:01<00:07,  3.87it/s]"
+      "Loading stocks:  15%|█▌        | 5/33 [00:01<00:08,  3.23it/s]"
      ]
     },
     {
@@ -320,7 +333,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  21%|██        | 7/33 [00:01<00:05,  5.00it/s]"
+      "Loading stocks:  21%|██        | 7/33 [00:01<00:05,  4.40it/s]"
      ]
     },
     {
@@ -335,7 +348,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  24%|██▍       | 8/33 [00:01<00:05,  4.64it/s]"
+      "Loading stocks:  24%|██▍       | 8/33 [00:02<00:05,  4.17it/s]"
      ]
     },
     {
@@ -349,7 +362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  27%|██▋       | 9/33 [00:02<00:05,  4.50it/s]"
+      "Loading stocks:  27%|██▋       | 9/33 [00:02<00:05,  4.09it/s]"
      ]
     },
     {
@@ -363,7 +376,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  30%|███       | 10/33 [00:02<00:05,  4.53it/s]"
+      "Loading stocks:  30%|███       | 10/33 [00:02<00:05,  4.17it/s]"
      ]
     },
     {
@@ -377,7 +390,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  33%|███▎      | 11/33 [00:02<00:04,  4.41it/s]"
+      "Loading stocks:  33%|███▎      | 11/33 [00:02<00:05,  4.12it/s]"
      ]
     },
     {
@@ -391,14 +404,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  36%|███▋      | 12/33 [00:02<00:04,  4.56it/s]"
+      "Loading stocks:  36%|███▋      | 12/33 [00:03<00:04,  4.28it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  GS: 2502 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
+      "  GS: 2502 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading stocks:  39%|███▉      | 13/33 [00:03<00:04,  4.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  MS: 2501 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
      ]
     },
@@ -406,7 +432,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  42%|████▏     | 14/33 [00:03<00:04,  4.63it/s]"
+      "Loading stocks:  42%|████▏     | 14/33 [00:03<00:04,  4.40it/s]"
      ]
     },
     {
@@ -420,7 +446,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  45%|████▌     | 15/33 [00:03<00:04,  4.44it/s]"
+      "Loading stocks:  45%|████▌     | 15/33 [00:04<00:06,  2.98it/s]"
      ]
     },
     {
@@ -434,29 +460,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  52%|█████▏    | 17/33 [00:03<00:03,  4.63it/s]"
+      "Loading stocks:  48%|████▊     | 16/33 [00:04<00:05,  3.29it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  PFE: 2508 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
-      "  UNH: 2494 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
+      "  PFE: 2508 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  58%|█████▊    | 19/33 [00:04<00:02,  4.91it/s]"
+      "Loading stocks:  55%|█████▍    | 18/33 [00:04<00:03,  3.85it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  LLY: 2497 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
+      "  UNH: 2494 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
+      "  LLY: 2497 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading stocks:  58%|█████▊    | 19/33 [00:04<00:03,  4.17it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  ABBV: 2496 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
      ]
     },
@@ -464,7 +503,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  64%|██████▎   | 21/33 [00:04<00:02,  4.77it/s]"
+      "Loading stocks:  64%|██████▎   | 21/33 [00:05<00:02,  4.37it/s]"
      ]
     },
     {
@@ -479,7 +518,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  67%|██████▋   | 22/33 [00:04<00:02,  4.88it/s]"
+      "Loading stocks:  67%|██████▋   | 22/33 [00:05<00:02,  4.53it/s]"
      ]
     },
     {
@@ -493,7 +532,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  70%|██████▉   | 23/33 [00:05<00:02,  4.82it/s]"
+      "Loading stocks:  70%|██████▉   | 23/33 [00:05<00:02,  4.56it/s]"
      ]
     },
     {
@@ -507,7 +546,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  73%|███████▎  | 24/33 [00:05<00:01,  4.80it/s]"
+      "Loading stocks:  73%|███████▎  | 24/33 [00:06<00:02,  4.49it/s]"
      ]
     },
     {
@@ -521,7 +560,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  76%|███████▌  | 25/33 [00:05<00:01,  4.69it/s]"
+      "Loading stocks:  76%|███████▌  | 25/33 [00:06<00:01,  4.45it/s]"
      ]
     },
     {
@@ -535,14 +574,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  82%|████████▏ | 27/33 [00:05<00:01,  4.80it/s]"
+      "Loading stocks:  79%|███████▉  | 26/33 [00:06<00:01,  4.49it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  CVX: 2507 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
+      "  CVX: 2507 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading stocks:  82%|████████▏ | 27/33 [00:06<00:01,  3.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  COP: 2502 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
      ]
     },
@@ -550,14 +602,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  88%|████████▊ | 29/33 [00:06<00:00,  4.79it/s]"
+      "Loading stocks:  85%|████████▍ | 28/33 [00:07<00:01,  3.64it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  BA: 2506 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
+      "  BA: 2506 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading stocks:  88%|████████▊ | 29/33 [00:07<00:01,  3.94it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  CAT: 2505 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
      ]
     },
@@ -565,7 +630,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  91%|█████████ | 30/33 [00:06<00:00,  4.68it/s]"
+      "Loading stocks:  91%|█████████ | 30/33 [00:07<00:00,  4.01it/s]"
      ]
     },
     {
@@ -579,7 +644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  94%|█████████▍| 31/33 [00:06<00:00,  4.47it/s]"
+      "Loading stocks:  94%|█████████▍| 31/33 [00:07<00:00,  3.88it/s]"
      ]
     },
     {
@@ -593,28 +658,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks:  97%|█████████▋| 32/33 [00:07<00:00,  4.54it/s]"
+      "Loading stocks:  97%|█████████▋| 32/33 [00:08<00:00,  3.78it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  WMT: 2510 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
-      "  V: 2507 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
+      "  WMT: 2510 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading stocks: 100%|██████████| 33/33 [00:07<00:00,  4.51it/s]"
+      "Loading stocks: 100%|██████████| 33/33 [00:09<00:00,  3.62it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  V: 2507 days, range 2015-11-20 00:00:00-05:00 to 2025-11-17 00:00:00-05:00\n",
       "\n",
       "Successfully loaded 33 stocks\n"
      ]
@@ -711,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1368,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing stocks:  85%|████████▍ | 28/33 [00:00<00:00, 278.24it/s]"
+      "Processing stocks:   0%|          | 0/33 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -1465,7 +1530,20 @@
       "\n",
       "MS - 20d horizon\n",
       "  Loading from cache (skipping recomputation)...\n",
-      "  Loaded 5 cached results\n",
+      "  Loaded 5 cached results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing stocks:  52%|█████▏    | 17/33 [00:00<00:00, 168.98it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "C - 1d horizon\n",
       "  Loading from cache (skipping recomputation)...\n",
@@ -1657,20 +1735,7 @@
       "\n",
       "CAT - 20d horizon\n",
       "  Loading from cache (skipping recomputation)...\n",
-      "  Loaded 5 cached results\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing stocks: 100%|██████████| 33/33 [00:00<00:00, 278.95it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  Loaded 5 cached results\n",
       "\n",
       "GE - 1d horizon\n",
       "  Loading from cache (skipping recomputation)...\n",
@@ -1694,7 +1759,20 @@
       "\n",
       "TSLA - 20d horizon\n",
       "  Loading from cache (skipping recomputation)...\n",
-      "  Loaded 5 cached results\n",
+      "  Loaded 5 cached results\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing stocks: 100%|██████████| 33/33 [00:00<00:00, 200.55it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "WMT - 1d horizon\n",
       "  Loading from cache (skipping recomputation)...\n",
@@ -1791,8 +1869,8 @@
     "    for horizon in FORECAST_HORIZONS:\n",
     "        print(f\"\\n{ticker} - {horizon}d horizon\")\n",
     "        \n",
-    "        # Check if cached\n",
-    "        if is_cached(ticker, horizon):\n",
+    "        # Check if cached (unless FORCE_RETRAIN is enabled)\n",
+    "        if not FORCE_RETRAIN and is_cached(ticker, horizon):\n",
     "            print(f\"  Loading from cache (skipping recomputation)...\")\n",
     "            cached_predictions, cached_results = load_model_cache(ticker, horizon)\n",
     "            \n",
@@ -1802,6 +1880,8 @@
     "                    all_results.append(result)\n",
     "                print(f\"  Loaded {len(cached_results)} cached results\")\n",
     "                continue\n",
+    "        elif FORCE_RETRAIN and is_cached(ticker, horizon):\n",
+    "            print(f\"  ⚠️  FORCE_RETRAIN enabled: Ignoring cache, will retrain and save new results\")\n",
     "        \n",
     "        # Not cached - run full training pipeline\n",
     "        try:\n",
@@ -2189,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3523,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3767,7 +3847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
